--- a/BLAZAMGui/UI/Dev/DatabaseBrowserModalContent.razor
+++ b/BLAZAMGui/UI/Dev/DatabaseBrowserModalContent.razor
@@ -65,7 +65,7 @@
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        Modal.Options = new() { FullScreen = true };
+        Modal.Fullscreen();
         userSettings = await Context.UserSettings.ToListAsync();
         userNotifications = await Context.UserNotifications.ToListAsync();
         accessLevels = await Context.AccessLevels.ToListAsync();
