--- a/BLAZAMGui/UI/Inputs/ADAutoCompleteResult.razor
+++ b/BLAZAMGui/UI/Inputs/ADAutoCompleteResult.razor
@@ -64,10 +64,10 @@
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        Task.Run(() =>
+        Task.Run(async() =>
         {
-            Task.Delay(10).Wait();
-            LoadTypeIcon();
+            await Task.Delay(10);
+            await LoadTypeIcon();
         
         });
 
