--- a/BLAZAMGui/_Imports.razor
+++ b/BLAZAMGui/_Imports.razor
@@ -38,12 +38,14 @@
 
 @using BLAZAM.Helpers
 @using BLAZAM.Server.Data
+@using BLAZAM.Jobs;
 
 
 @using BLAZAM.Gui.UI.Dev
 @using BLAZAM.Gui.UI;
 @using BLAZAM.Gui.UI.Modals
 @using BLAZAM.Gui.UI.Dashboard
+@using BLAZAM.Gui.Helper;
 
 @using BLAZAM.Gui.UI.Users
 @using BLAZAM.Gui.UI.Users.Fields
