--- a/BLAZAMGui/UI/Computers/RegisterPrintersModalContent.razor
+++ b/BLAZAMGui/UI/Computers/RegisterPrintersModalContent.razor
@@ -70,7 +70,7 @@
             }
             else
             {
-                MessageService.ShowMessage<JobResultDialog>(registerJob.ToDialogParameters(), registerJob.Title);
+                MessageService.ShowMessage<JobResultDialog>(registerJob.ToDialogParameters(), registerJob.Name);
                 return;
             }
 
