Audit only tracking user searches fixed

--- a/BLAZAM/Pages/Computers/ViewComputer.razor
+++ b/BLAZAM/Pages/Computers/ViewComputer.razor
@@ -241,6 +241,8 @@
                 RefreshEntryComponents();
             });
         }
+        AuditLogger.Searched(Computer);
+
         LoadingData = false;
         await RefreshEntryComponents();
     }
