--- a/BLAZAM/Pages/Printers/ViewPrinter.razor
+++ b/BLAZAM/Pages/Printers/ViewPrinter.razor
@@ -110,7 +110,8 @@
     {
         await base.OnInitializedAsync();
         await InvokeAsync(StateHasChanged);
-        
+        AuditLogger.Searched(Printer);
+
         LoadingData = false;
         await RefreshEntryComponents();
     }
