--- a/BLAZAMGui/UI/Modals/ChangeHistoryModalContent.razor
+++ b/BLAZAMGui/UI/Modals/ChangeHistoryModalContent.razor
@@ -1,4 +1,5 @@
 ﻿@using BLAZAM.Database.Models.Audit;
+@using BLAZAM.Services.Audit;
 @inherits AppModalContent
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="pa-0">
     @if (_events.Count > 0)
